# turbobadger

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  TurboBadgerDemo.data  TurboBadgerDemo.html  TurboBadgerDemo.js  TurboBadgerDemo.wasm  TurboBadgerDemoSDL.data  TurboBadgerDemoSDL.html  TurboBadgerDemoSDL.js  TurboBadgerDemoSDL.wasm  annotated.html  annotated.js  build.sh  classes.html  classtb_1_1_data_parser-members.html  classtb_1_1_data_parser.html  classtb_1_1_data_parser.js  classtb_1_1_file_parser-members.html  classtb_1_1_file_parser.html  classtb_1_1_file_parser.js  classtb_1_1_layout_params-members.html  classtb_1_1_layout_params.html  classtb_1_1_layout_params.js  classtb_1_1_preferred_size-members.html  classtb_1_1_preferred_size.html  classtb_1_1_preferred_size.js  classtb_1_1_size_constraints-members.html  classtb_1_1_size_constraints.html  classtb_1_1_size_constraints.js  classtb_1_1_t_b_animated_float-members.html  classtb_1_1_t_b_animated_float.html  classtb_1_1_t_b_animated_float.js  classtb_1_1_t_b_animation_blocker-members.html  classtb_1_1_t_b_animation_blocker.html  classtb_1_1_t_b_animation_blocker.js  classtb_1_1_t_b_animation_listener-members.html  classtb_1_1_t_b_animation_listener.html  classtb_1_1_t_b_animation_listener.js  (+718 more)
.circleci/: config.yml
Demo/: CMakeLists.txt
Demo/demo01/: Demo01.cpp
Demo/platform/: glfw_extra_linux.cpp  glfw_extra_win.cpp  main.cpp  port_glfw.cpp  port_glfw.hpp  port_sdl2.cpp  port_sdl2.hpp
DemoAndroid/: build.sh  update_assets.sh
DemoAndroid/app/: build.gradle
DemoAndroid/app/src/main/: AndroidManifest.xml
DemoAndroid/app/src/main/java/org/hastybadger/demo/: TBActivity.java  TBView.java
DemoAndroid/app/src/main/jni/: jni_glue.cpp
DemoAndroid/gradle/wrapper/: gradle-wrapper.properties
DemoAndroid/jni/: Android.mk  Application.mk
DemoAndroid2/app/src/main/java/org/hastybadger/demo/: TBLib.java
DemoAndroid2/app/src/main/jni/: App.cpp  jni_glue.cpp
DemoAndroid2/gradle/wrapper/: gradle-wrapper.properties
cmake/: AddResources.cmake
doc/: Doxyfile.in  footer.html  ghpages.sh  header.html  mainpage.h  skindoc.py
resources/metadata/: tb_widgets_attr.tb.txt
search/: all_61.js  all_62.js  all_63.js  all_64.js  all_65.js  all_66.js  all_67.js  all_68.js  all_69.js  all_6c.js  all_6d.js  all_6e.js  all_6f.js  all_70.js  all_72.js  all_73.js  all_74.js  all_75.js  all_76.js  all_77.js  all_78.js  all_79.js  classes_62.js  classes_63.js  classes_64.js  classes_66.js  classes_69.js  classes_6c.js  classes_6d.js  classes_6e.js  classes_70.js  classes_73.js  classes_74.js  enums_61.js  enums_62.js  enums_65.js  enums_67.js  enums_69.js  enums_6c.js  enums_6d.js  (+68 more)
src/tb/: CMakeLists.txt  tb_color.h  tb_debug.cpp  tb_dimension.cpp  tb_dimension.h  tb_editfield.cpp  tb_editfield.h  tb_file_posix.cpp  tb_file_sdl2.cpp  tb_font_renderer.cpp  tb_font_renderer.h  tb_geometry.h  tb_hash.h  tb_hashtable.cpp  tb_hashtable.h  tb_id.h  tb_image_loader_stb.cpp  tb_layout.h  tb_menu_window.cpp  tb_message_window.cpp  tb_message_window.h  tb_node_tree.cpp  tb_node_tree.h  tb_popup_window.h  tb_select_item.h  tb_str.h  tb_style_edit.cpp  tb_style_edit.h  tb_style_edit_content.cpp  tb_style_edit_content.h  tb_system_android.cpp  tb_system_linux.cpp  tb_system_sdl.cpp  tb_system_win.cpp  tb_tempbuffer.cpp  tb_value.h  tb_widgets.cpp  tb_widgets.h  tb_widgets_common.cpp  tb_widgets_common.h  (+3 more)
src/tb/image/: tb_image_manager.cpp  tb_image_manager.h  tb_image_widget.h
src/tb/renderers/: tb_renderer_batcher.cpp  tb_renderer_batcher.h  tb_renderer_gl.cpp  tb_renderer_gl.h
src/tb/tests/: tb_test.cpp
